--- a/Veritas Anaconda/29180915_github.ipynb
+++ b/Veritas Anaconda/29180915_github.ipynb
@@ -24,9 +24,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Clone\n",
+    "## 1. Create a new rep\n",
+    "\n",
+    "### - got to github.com and login\n",
+    "### - create a new repository.\n",
+    "### - copy https link: https://github.com/veritasbrain/veritas_fall2018.git"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Clone\n",
     "\n",
     "### git clone https://github.com/TheMysteryBox77/veritas_fall_2018.git"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Add updates to repository\n",
+    "### - git add -all"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Commit\n",
+    "### -git commit -m \"add notebooks\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Push\n",
+    "### - git push"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Pull\n",
+    "### - git pull"
    ]
   }
  ],
