--- a/Veritas Anaconda/29180915_github.ipynb
+++ b/Veritas Anaconda/29180915_github.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "source": [
     "## 3. Add updates to repository\n",
-    "### - git add -all"
+    "### - git add --all"
    ]
   },
   {
