--- a/Veritas Anaconda/20180922_Class.ipynb
+++ b/Veritas Anaconda/20180922_Class.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,18 @@
     "        self.num = top\n",
     "        self.den = bottom\n",
     "        \n",
+    "    def setNum(self, value):\n",
+    "        self.num = value\n",
+    "        \n",
+    "    def setDen(self, value):\n",
+    "        self.den = value\n",
+    "        \n",
+    "    def getNum(self):\n",
+    "        return self.num\n",
+    "    \n",
+    "    def getDen(self):\n",
+    "        return self.den\n",
+    "    \n",
     "    def show(self):\n",
     "        print(self.num, '/', self.den)\n",
     "        \n",
@@ -40,13 +52,33 @@
     "        common = gcd(newnum,newden)\n",
     "\n",
     "        return Fraction(newnum//common,newden//common)\n",
-    "    \n",
+    "         \n",
+    "        \n",
     "    def __eq__(self, other):\n",
     "        firstnum = self.num * other.den\n",
     "        secondnum = other.num * self.den\n",
     "\n",
     "        return firstnum == secondnum\n",
-    "    "
+    "    \n",
+    "    def __sub__(self, otherfraction):\n",
+    "        newnum = self.num*otherfraction.den - self.den*otherfraction.num\n",
+    "        newden = self.den * otherfraction.den\n",
+    "        common = gcd(newnum, newden)\n",
+    "        \n",
+    "        return (newnum//common, newden//common)\n",
+    "    \n",
+    "    def __mul__(self, otherfraction):\n",
+    "        newnum = self.num*otherfraction.num\n",
+    "        newden = self.den*otherfraction.den\n",
+    "        common = gcd(newnum, newden)\n",
+    "        \n",
+    "        return (newnum//common, newden//common)\n",
+    "        \n",
+    "    def __truediv__(sel,f otherfraction):\n",
+    "        newnum = self.num*otherfraction.den\n",
+    "        newden = self.den*otherfraction.num\n",
+    "        common = gcd(newnum, newden)\n",
+    "        return (newnum//common, newden//common)"
    ]
   },
   {
@@ -209,6 +241,30 @@
    ],
    "source": [
     "f1 == f2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for /: 'Fraction' and 'Fraction'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-37c737e9b992>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mFraction\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mFraction\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mz\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'Fraction' and 'Fraction'"
+     ]
+    }
+   ],
+   "source": [
+    "x = Fraction(3,5)\n",
+    "y = Fraction(2,5)\n",
+    "z = x/y\n",
+    "print(z)"
    ]
   },
   {
